# aigc-hoopics

./: .env  Cargo.toml  README.md  config.toml  example.config.toml
censorship/: Cargo.toml  README.md
censorship/src/: cimage.rs  cprompt.rs  lib.rs
config/: Cargo.toml
config/examples/: config.rs
config/src/: lib.rs
constant/: Cargo.toml
dispatcher/: Cargo.toml
dispatcher/src/: lib.rs  rules.rs
docs/: postgres-command.md
flux/: Cargo.toml
flux/src/: lib.rs
hoopics/: Cargo.toml
hoopics/src/: main.rs  routes.rs
inspector/: Cargo.toml
inspector/src/: lib.rs
ollama/: Cargo.toml
ollama/examples/: ollama.rs
ollama/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: health.rs  job_req.rs  job_status.rs  lib.rs  ollama.rs  sdxl.rs
psql/: Cargo.toml  diesel.toml
psql/examples/: psql.rs
psql/migrations/2024-12-03-032920_h_jobs/: up.sql
psql/script/: migrate.sh  print-schema.sh
psql/src/: check_status.rs  db.rs  engine.rs  hjobs.rs  lib.rs  models.rs  schema.rs
refresher/: Cargo.toml  README.md
refresher/src/: lib.rs
scripts/: create_table_hjobs.sql
sdxl/: Cargo.toml
sdxl/src/: lib.rs
service/: Cargo.toml
service/src/: error.rs  lib.rs  routes.rs
service/src/api/: error.rs  health.rs  job.rs  job_status.rs  mod.rs  prompt.rs  submit_job.rs
service/src/middleware/: auth.rs  routes.rs
test/: READEME.md  api_job-status.sh  api_submit-job.sh  api_submit-job_flux.sh  api_submit-job_sdxl.sh  health.rs  health.sh  job-status.sh  job.sh  prompt.sh  sdxl-job-status.sh  send-to-sdxl.sh  submit-job.sh
test/direct/: flux-job-status.sh  sdxl-job-status.sh  send-to-sdxl.sh
worker/: Cargo.toml
worker/src/: bee.rs  job.rs  lib.rs  queue.rs
