[package]
name = "psql"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
config = { path = "../config" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.12", features = ["derive"] }

[print_schema]
file = "src/schema.rs"

[migrations_directory]
dir = "migrations"