[package]
name = "psql"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
primitives = { path = "../primitives" }
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
