[package]
name = "refresher"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inspector = { path = "../inspector" }
tokio = { version = "1", features = ["full"] }
colored = "2.0"
dispatcher = { path = "../dispatcher" }
psql = { path = "../psql" }
primitives = { path = "../primitives" }
config = { path = "../config" }