[package]
name = "sdxl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { path = "../config" }
reqwest = { version = "0.11", features = ["json"] }
async_once = "0.2.6"
primitives = { path = "../primitives" }
colored = "2.0"
