[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ollama = { path = "../ollama" }
worker = { path = "../worker" }
inspector = { path = "../inspector" }
sdxl = { path = "../sdxl" }
primitives = { path = "../primitives" }