[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inspector = { path = "../inspector" }
sdxl = { path = "../sdxl" }
async_once = "0.2.6"
tokio = { version = "1", features = ["full"] }
primitives = { path = "../primitives" }
dispatcher = { path = "../dispatcher" }
psql = { path = "../psql" }
ollama = { path = "../ollama" }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
]
